--- a/AIsettings.html
+++ b/AIsettings.html
@@ -164,6 +164,7 @@
             قائمة التواصل
           </a>
           <!-- ✅ END NEW ITEM -->
+          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html" class="active">
             <i class="fa-solid fa-robot"></i>
