--- a/offers.html
+++ b/offers.html
@@ -625,7 +625,7 @@
         imagesPreviewContainer.innerHTML = "";
       }
 
-      // 📱 Menu toggle for mobile
+      // 📱 Menu toggle for mobile fff
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
       if (menuToggle) {
