--- a/AIsettings.html
+++ b/AIsettings.html
@@ -173,7 +173,7 @@
 
           <a href="offers.html">
             <i class="fa-solid fa-gift"></i>
-            الحملات الاعلانيةة
+            الحملات الاعلانية
           </a>
         </nav>
       </aside>
