--- a/AIsettings.html
+++ b/AIsettings.html
@@ -165,6 +165,7 @@
           </a>
           <!-- ✅ END NEW ITEM -->
           <!-- ✅ END NEW ITEM -->
+          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html" class="active">
             <i class="fa-solid fa-robot"></i>
