--- a/AIsettings.html
+++ b/AIsettings.html
@@ -166,6 +166,7 @@
           <!-- ✅ END NEW ITEM -->
           <!-- ✅ END NEW ITEM -->
           <!-- ✅ END NEW ITEM -->
+          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html" class="active">
             <i class="fa-solid fa-robot"></i>
