Trigger deploy as moesamiii

--- a/AIsettings.html
+++ b/AIsettings.html
@@ -167,6 +167,7 @@
           <!-- ✅ END NEW ITEM -->
           <!-- ✅ END NEW ITEM -->
           <!-- ✅ END NEW ITEM -->
+          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html" class="active">
             <i class="fa-solid fa-robot"></i>
