--- a/offers.html
+++ b/offers.html
@@ -86,7 +86,6 @@
         color: #aaa;
       }
 
-      /* ✅ Preview styling for multiple images */
       .images-preview-container {
         display: flex;
         flex-wrap: wrap;
@@ -127,7 +126,6 @@
         margin: 0;
       }
 
-      /* ✅ Debug info box */
       .debug-info {
         background: #f0f0f0;
         border: 1px solid #ddd;
@@ -160,7 +158,7 @@
         display: inline-block;
         width: 16px;
         height: 16px;
-        border: 3px solid rgba(255, 255, 255, 0.3);
+        border: ३px solid rgba(255, 255, 255, 0.3);
         border-radius: 50%;
         border-top-color: #fff;
         animation: spin 1s ease-in-out infinite;
@@ -232,12 +230,10 @@
             جدول التواصل
           </a>
 
-          <!-- ✅ NEW MENU ITEM ADDED HERE -->
           <a href="contactlist.html">
             <i class="fa-solid fa-address-book"></i>
             قائمة التواصل
           </a>
-          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
@@ -302,7 +298,6 @@
 
             <button id="sendBtn" onclick="sendOffer()">إرسال العرض الآن</button>
 
-            <!-- Debug Info -->
             <div class="debug-info" id="debugInfo">
               <h4>🔍 معلومات التشخيص</h4>
               <div id="debugContent"></div>
@@ -325,7 +320,6 @@
 
       let selectedFiles = [];
 
-      // 🔍 Debug helper
       function addDebugLog(message, type = "info") {
         const debugContent = document.getElementById("debugContent");
         const debugInfo = document.getElementById("debugInfo");
@@ -345,7 +339,6 @@
         progressInfo.textContent = message;
       }
 
-      // 🔐 Login logic
       async function login() {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
@@ -377,7 +370,6 @@
         document.getElementById("dashboardContent").style.display = "block";
       }
 
-      // 🌙 Theme toggle
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
@@ -390,13 +382,13 @@
           localStorage.setItem("clinic_theme", "light");
         }
       });
+
       if (localStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
         const icon = themeToggle.querySelector("i");
         icon.classList.replace("fa-moon", "fa-sun");
       }
 
-      // 🖼️ Preview multiple images
       const offerImage = document.getElementById("offerImage");
       const imagesPreviewContainer = document.getElementById(
         "imagesPreviewContainer"
@@ -434,7 +426,6 @@
         addDebugLog(`تم إزالة صورة. المتبقي: ${selectedFiles.length} صورة`);
       }
 
-      // 🚀 Upload single image to Supabase
       async function uploadImage(file) {
         try {
           addDebugLog(`بدء رفع الصورة: ${file.name}`);
@@ -471,7 +462,6 @@
         }
       }
 
-      // 📤 Send single message with image
       async function sendWhatsAppMessage(phone, messageText, imageUrl, isLast) {
         try {
           const payload = {
@@ -508,14 +498,12 @@
         }
       }
 
-      // 🚀 Main send offer function
       async function sendOffer() {
         const sendBtn = document.getElementById("sendBtn");
         const title = document.getElementById("offerTitle").value.trim();
         const desc = document.getElementById("offerDesc").value.trim();
         const date = document.getElementById("offerDate").value;
 
-        // Clear previous debug logs
         document.getElementById("debugContent").innerHTML = "";
         document.getElementById("debugInfo").style.display = "block";
         document.getElementById("progressInfo").style.display = "none";
@@ -526,16 +514,14 @@
           return;
         }
 
-        // Disable button during send
         sendBtn.disabled = true;
         sendBtn.innerHTML = 'جاري الإرسال... <span class="spinner"></span>';
 
-        const phone = "962785050875"; // ✅ Replace with recipient phone number
+        const phone = "962785050875";
         const messageText = `${desc}\n⏰ صالح حتى: ${date}`;
 
         try {
           if (selectedFiles.length === 0) {
-            // No images - send text only
             addDebugLog("لا توجد صور - سيتم إرسال نص فقط");
             updateProgress("إرسال رسالة نصية...");
 
@@ -544,7 +530,6 @@
             alert("✅ تم إرسال العرض بنجاح!");
             clearForm();
           } else {
-            // Upload and send multiple images
             addDebugLog(`بدء رفع وإرسال ${selectedFiles.length} صورة`);
 
             let successCount = 0;
@@ -556,11 +541,9 @@
                 `جاري رفع الصورة ${i + 1} من ${selectedFiles.length}...`
               );
 
-              // Upload image
               const imageUrl = await uploadImage(file);
 
               if (imageUrl) {
-                // Wait 2 seconds between messages to avoid rate limiting
                 if (i > 0) {
                   updateProgress(`انتظار قبل إرسال الصورة ${i + 1}...`);
                   await new Promise((resolve) => setTimeout(resolve, 2000));
@@ -570,7 +553,6 @@
                   `إرسال الصورة ${i + 1} من ${selectedFiles.length}...`
                 );
 
-                // Send message with image
                 const isLast = i === selectedFiles.length - 1;
                 const success = await sendWhatsAppMessage(
                   phone,
@@ -610,7 +592,6 @@
           addDebugLog(`خطأ في الإرسال: ${err.message}`, "error");
           alert("❌ خطأ أثناء الإرسال: " + err.message);
         } finally {
-          // Re-enable button
           sendBtn.disabled = false;
           sendBtn.innerHTML = "إرسال العرض الآن";
           document.getElementById("progressInfo").style.display = "none";
@@ -626,7 +607,6 @@
         imagesPreviewContainer.innerHTML = "";
       }
 
-      // 📱 Menu toggle for mobile fff
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
       if (menuToggle) {
@@ -634,6 +614,64 @@
           sidebar.classList.toggle("active");
         });
       }
+
+      /*********************************************************
+        📌 NEW FEATURE: AUTO-DETECT NEW BOOKINGS IN GOOGLE SHEET
+        AND SEND WHATSAPP GREETING MESSAGE
+      *********************************************************/
+
+      const SHEET_ID = "1veVe9vz1R8UNf1dBQ3ayRV50ae6Zy6ze2tQn24gUueQ";
+      const SHEET_RANGE = "Sheet1!A:E";
+      let lastTimestamp = null;
+
+      async function checkGoogleSheet() {
+        try {
+          const url = `https://opensheet.elk.sh/${SHEET_ID}/Sheet1`; // Fast public parser
+
+          const res = await fetch(url);
+          const rows = await res.json();
+
+          if (!rows || rows.length === 0) return;
+
+          const last = rows[rows.length - 1];
+
+          if (lastTimestamp === null) {
+            lastTimestamp = last.Timestamp;
+            return;
+          }
+
+          if (last.Timestamp !== lastTimestamp) {
+            lastTimestamp = last.Timestamp;
+
+            const name = last.Name;
+            const phone = last.Phone;
+            const service = last.Service;
+            const appointment = last.Appointment;
+
+            const msg = `مرحباً ${name} 👋\nشكراً لحجزك لخدمة: ${service}\nموعدك: ${appointment}`;
+
+            // Auto-default image based on service
+            const defaultImages = {
+              تنظيف: "https://i.imgur.com/ZxT8tKq.png",
+              حشو: "https://i.imgur.com/tnyJA8i.png",
+              تبيض: "https://i.imgur.com/UptF5Hh.png",
+              فحص: "https://i.imgur.com/0dYpY1g.png",
+            };
+
+            const img = defaultImages[service] || null;
+
+            addDebugLog(
+              "🔥 اكتشاف حجز جديد في Google Sheet — إرسال رسالة تلقائية"
+            );
+            await sendWhatsAppMessage(phone, msg, img, true);
+          }
+        } catch (err) {
+          addDebugLog("❌ خطأ أثناء قراءة Google Sheet: " + err.message);
+        }
+      }
+
+      // Check every 10 seconds
+      setInterval(checkGoogleSheet, 10000);
     </script>
   </body>
 </html>
