--- a/offers.html
+++ b/offers.html
@@ -622,56 +622,68 @@
 
       const SHEET_ID = "1veVe9vz1R8UNf1dBQ3ayRV50ae6Zy6ze2tQn24gUueQ";
       const SHEET_RANGE = "Sheet1!A:E";
-      let lastTimestamp = null;
+
+      let lastTimestamp = "";
 
       async function checkGoogleSheet() {
+        const sheetID = document.getElementById("sheetID").value.trim();
+        if (!sheetID) return;
+
         try {
-          const url = `https://opensheet.elk.sh/${SHEET_ID}/Sheet1`; // Fast public parser
+          const url = `https://opensheet.elk.sh/${sheetID}/Sheet1`;
 
           const res = await fetch(url);
-          const rows = await res.json();
-
-          if (!rows || rows.length === 0) return;
-
-          const last = rows[rows.length - 1];
-
-          if (lastTimestamp === null) {
-            lastTimestamp = last.Timestamp;
+          if (!res.ok) {
+            addDebugLog(`❌ Failed to load sheet: ${res.status}`);
             return;
           }
 
-          if (last.Timestamp !== lastTimestamp) {
-            lastTimestamp = last.Timestamp;
-
-            const name = last.Name;
-            const phone = last.Phone;
-            const service = last.Service;
-            const appointment = last.Appointment;
-
-            const msg = `مرحباً ${name} 👋\nشكراً لحجزك لخدمة: ${service}\nموعدك: ${appointment}`;
-
-            // Auto-default image based on service
-            const defaultImages = {
-              تنظيف: "https://i.imgur.com/ZxT8tKq.png",
-              حشو: "https://i.imgur.com/tnyJA8i.png",
-              تبيض: "https://i.imgur.com/UptF5Hh.png",
-              فحص: "https://i.imgur.com/0dYpY1g.png",
-            };
-
-            const img = defaultImages[service] || null;
-
-            addDebugLog(
-              "🔥 اكتشاف حجز جديد في Google Sheet — إرسال رسالة تلقائية"
-            );
-            await sendWhatsAppMessage(phone, msg, img, true);
+          const data = await res.json();
+          if (!Array.isArray(data) || data.length === 0) {
+            addDebugLog("❌ Sheet returned empty data");
+            return;
           }
-        } catch (err) {
-          addDebugLog("❌ خطأ أثناء قراءة Google Sheet: " + err.message);
+
+          const lastRow = data[data.length - 1];
+
+          const name = lastRow.Name || "";
+          const phone = lastRow.Phone || "";
+          const service = lastRow.Service || "";
+          const appointment = lastRow.Appointment || "";
+          const timestamp = lastRow.Timestamp || "";
+
+          if (!timestamp) {
+            addDebugLog("❌ Timestamp missing in last row");
+            return;
+          }
+
+          // Prevent duplicate triggers
+          if (timestamp === lastTimestamp) return;
+          lastTimestamp = timestamp;
+
+          addDebugLog(`🟢 NEW ROW DETECTED: ${name} - ${phone}`);
+
+          const msg = `مرحبا ${name} 👋
+    
+شكراً لحجزك:
+${service}
+
+موعدك:
+${appointment}
+`;
+
+          // Auto-select image based on service
+          const image = service.includes("تنظيف")
+            ? "https://i.imgur.com/BYr4pZe.jpg"
+            : service.includes("حشو")
+            ? "https://i.imgur.com/tPp8Gny.jpeg"
+            : "https://i.imgur.com/43K4mGC.jpeg";
+
+          await sendWhatsAppMessage(phone, msg, image);
+        } catch (error) {
+          addDebugLog("❌ خطأ أثناء قراءة Google Sheet: " + error);
         }
       }
-
-      // Check every 10 seconds
-      setInterval(checkGoogleSheet, 10000);
     </script>
   </body>
 </html>
