--- a/offers.html
+++ b/offers.html
@@ -86,6 +86,7 @@
         color: #aaa;
       }
 
+      /* ✅ Preview styling for multiple images */
       .images-preview-container {
         display: flex;
         flex-wrap: wrap;
@@ -126,6 +127,7 @@
         margin: 0;
       }
 
+      /* ✅ Debug info box */
       .debug-info {
         background: #f0f0f0;
         border: 1px solid #ddd;
@@ -158,7 +160,7 @@
         display: inline-block;
         width: 16px;
         height: 16px;
-        border: ३px solid rgba(255, 255, 255, 0.3);
+        border: 3px solid rgba(255, 255, 255, 0.3);
         border-radius: 50%;
         border-top-color: #fff;
         animation: spin 1s ease-in-out infinite;
@@ -230,10 +232,12 @@
             جدول التواصل
           </a>
 
+          <!-- ✅ NEW MENU ITEM ADDED HERE -->
           <a href="contactlist.html">
             <i class="fa-solid fa-address-book"></i>
             قائمة التواصل
           </a>
+          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
@@ -298,6 +302,7 @@
 
             <button id="sendBtn" onclick="sendOffer()">إرسال العرض الآن</button>
 
+            <!-- Debug Info -->
             <div class="debug-info" id="debugInfo">
               <h4>🔍 معلومات التشخيص</h4>
               <div id="debugContent"></div>
@@ -310,7 +315,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
     <script>
       // 🔑 Supabase configuration
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
@@ -320,6 +324,7 @@
 
       let selectedFiles = [];
 
+      // 🔍 Debug helper
       function addDebugLog(message, type = "info") {
         const debugContent = document.getElementById("debugContent");
         const debugInfo = document.getElementById("debugInfo");
@@ -339,6 +344,7 @@
         progressInfo.textContent = message;
       }
 
+      // 🔐 Login logic
       async function login() {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
@@ -370,6 +376,7 @@
         document.getElementById("dashboardContent").style.display = "block";
       }
 
+      // 🌙 Theme toggle
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
@@ -382,13 +389,13 @@
           localStorage.setItem("clinic_theme", "light");
         }
       });
-
       if (localStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
         const icon = themeToggle.querySelector("i");
         icon.classList.replace("fa-moon", "fa-sun");
       }
 
+      // 🖼️ Preview multiple images
       const offerImage = document.getElementById("offerImage");
       const imagesPreviewContainer = document.getElementById(
         "imagesPreviewContainer"
@@ -426,6 +433,7 @@
         addDebugLog(`تم إزالة صورة. المتبقي: ${selectedFiles.length} صورة`);
       }
 
+      // 🚀 Upload single image to Supabase
       async function uploadImage(file) {
         try {
           addDebugLog(`بدء رفع الصورة: ${file.name}`);
@@ -462,6 +470,7 @@
         }
       }
 
+      // 📤 Send single message with image
       async function sendWhatsAppMessage(phone, messageText, imageUrl, isLast) {
         try {
           const payload = {
@@ -498,12 +507,14 @@
         }
       }
 
+      // 🚀 Main send offer function
       async function sendOffer() {
         const sendBtn = document.getElementById("sendBtn");
         const title = document.getElementById("offerTitle").value.trim();
         const desc = document.getElementById("offerDesc").value.trim();
         const date = document.getElementById("offerDate").value;
 
+        // Clear previous debug logs
         document.getElementById("debugContent").innerHTML = "";
         document.getElementById("debugInfo").style.display = "block";
         document.getElementById("progressInfo").style.display = "none";
@@ -514,14 +525,16 @@
           return;
         }
 
+        // Disable button during send
         sendBtn.disabled = true;
         sendBtn.innerHTML = 'جاري الإرسال... <span class="spinner"></span>';
 
-        const phone = "962785050875";
+        const phone = "962785050875"; // ✅ Replace with recipient phone number
         const messageText = `${desc}\n⏰ صالح حتى: ${date}`;
 
         try {
           if (selectedFiles.length === 0) {
+            // No images - send text only
             addDebugLog("لا توجد صور - سيتم إرسال نص فقط");
             updateProgress("إرسال رسالة نصية...");
 
@@ -530,6 +543,7 @@
             alert("✅ تم إرسال العرض بنجاح!");
             clearForm();
           } else {
+            // Upload and send multiple images
             addDebugLog(`بدء رفع وإرسال ${selectedFiles.length} صورة`);
 
             let successCount = 0;
@@ -541,9 +555,11 @@
                 `جاري رفع الصورة ${i + 1} من ${selectedFiles.length}...`
               );
 
+              // Upload image
               const imageUrl = await uploadImage(file);
 
               if (imageUrl) {
+                // Wait 2 seconds between messages to avoid rate limiting
                 if (i > 0) {
                   updateProgress(`انتظار قبل إرسال الصورة ${i + 1}...`);
                   await new Promise((resolve) => setTimeout(resolve, 2000));
@@ -553,6 +569,7 @@
                   `إرسال الصورة ${i + 1} من ${selectedFiles.length}...`
                 );
 
+                // Send message with image
                 const isLast = i === selectedFiles.length - 1;
                 const success = await sendWhatsAppMessage(
                   phone,
@@ -592,6 +609,7 @@
           addDebugLog(`خطأ في الإرسال: ${err.message}`, "error");
           alert("❌ خطأ أثناء الإرسال: " + err.message);
         } finally {
+          // Re-enable button
           sendBtn.disabled = false;
           sendBtn.innerHTML = "إرسال العرض الآن";
           document.getElementById("progressInfo").style.display = "none";
@@ -607,6 +625,7 @@
         imagesPreviewContainer.innerHTML = "";
       }
 
+      // 📱 Menu toggle for mobile fff
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
       if (menuToggle) {
@@ -614,14 +633,15 @@
           sidebar.classList.toggle("active");
         });
       }
+
       /*********************************************************
   ✅ AUTO-SEND WHATSAPP WHEN NEW BOOKING APPEARS IN SHEET
 *********************************************************/
 
       const BOOKING_SHEET_ID = "1veVe9vz1R8UNf1dBQ3ayRV50ae6Zy6ze2tQn24gUueQ";
-      const TAB_NAME = "Sheet1";
+      const TAB_NAME = "Sheet1"; // your real sheet name
 
-      let lastProcessedTimestamp = ""; // last successful send
+      let lastProcessedTimestamp = ""; // track last row sent
 
       async function checkGoogleSheet() {
         try {
@@ -639,7 +659,7 @@
             return;
           }
 
-          // 🔍 Find the LAST valid row that contains ALL required columns
+          // ✅ Find last VALID row
           let row = null;
           for (let i = data.length - 1; i >= 0; i--) {
             if (
@@ -655,24 +675,23 @@
           }
 
           if (!row) {
-            addDebugLog("⚠️ No valid booking row found yet", "error");
+            addDebugLog("⚠️ No complete booking row found", "info");
             return;
           }
 
-          // Extract columns EXACTLY as your sheet
+          // Get values EXACTLY as in your sheet
           const name = row.Name;
           const phone = row.Phone;
           const service = row.Service;
           const appointment = row.Appointment;
           const timestamp = row.Timestamp;
 
-          // If timestamp not new → ignore
+          // Skip if already processed
           if (timestamp === lastProcessedTimestamp) return;
           lastProcessedTimestamp = timestamp;
 
-          addDebugLog(`🟢 New booking detected for: ${name}`, "success");
+          addDebugLog(`🟢 New booking detected → ${name}`, "success");
 
-          // WhatsApp message
           const messageText = `مرحبا ${name} 👋
 
 تم حجزك بنجاح 💜
@@ -683,7 +702,7 @@
 
           const defaultImage = "https://i.imgur.com/43K4mGC.jpeg";
 
-          // Send message
+          // Send WhatsApp using your existing function
           const sent = await sendWhatsAppMessage(
             phone,
             messageText,
@@ -691,19 +710,16 @@
           );
 
           if (sent) {
-            addDebugLog(
-              `📩 Auto WhatsApp sent successfully to ${phone}`,
-              "success"
-            );
+            addDebugLog(`📩 Auto WhatsApp sent → ${phone}`, "success");
           } else {
-            addDebugLog("❌ WhatsApp failed while auto-sending", "error");
+            addDebugLog("❌ Auto WhatsApp failed", "error");
           }
         } catch (err) {
           addDebugLog("❌ Google Sheet error: " + err.message, "error");
         }
       }
 
-      // ⏱ Check every 10 seconds
+      // ⏱ Runs every 10 seconds
       setInterval(checkGoogleSheet, 10000);
       checkGoogleSheet();
     </script>
