--- a/candy.html
+++ b/candy.html
@@ -2,63 +2,70 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auto WhatsApp Sender</title>
+    <title>Candy Auto Sender</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: Arial;
         background: #111;
         color: #0f0;
         padding: 20px;
       }
       .log-box {
         background: #000;
-        border: 1px solid #0f0;
         padding: 15px;
-        border-radius: 10px;
+        border-radius: 8px;
         height: 400px;
         overflow-y: auto;
-        font-size: 14px;
+        border: 1px solid #333;
       }
     </style>
   </head>
 
   <body>
-    <h2>⚡ Auto WhatsApp Sender — Listening for new bookings...</h2>
+    <h2>🍬 Candy Auto WhatsApp Sender</h2>
+    <p>Listening for new rows in <b>web_bookings</b>. Keep this page open.</p>
 
-    <div class="log-box" id="logBox"></div>
+    <div class="log-box" id="log"></div>
 
     <script>
-      // SAME keys you used in offers.html
+      // -------------------------------------------------------
+      // SUPABASE CONFIG (same as offers.html)
+      // -------------------------------------------------------
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
 
       const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-      // LOG HELPER
-      function log(message) {
-        const box = document.getElementById("logBox");
-        box.innerHTML += `<div>${new Date().toLocaleTimeString()} — ${message}</div>`;
+      // -------------------------------------------------------
+      // LOGGER (same look as your debug box style)
+      // -------------------------------------------------------
+      function log(msg) {
+        const box = document.getElementById("log");
+        const time = new Date().toLocaleTimeString("ar-EG");
+        box.innerHTML += `<div>[${time}] ➤ ${msg}</div>`;
         box.scrollTop = box.scrollHeight;
       }
 
-      // SAME WhatsApp sender from offers.html
-      async function sendWhatsApp(phone, service, name, contactTime) {
-        const payload = {
-          name: name,
-          phone: phone,
-          service: service,
-          appointment: "New booking received — preferred time: " + contactTime,
-          image: null,
-        };
-
-        log("📨 Sending WhatsApp message to " + phone);
-
+      // -------------------------------------------------------
+      // SAME WHATSAPP SENDER FROM YOUR offers.html
+      // FIXED PHONE NUMBER = 962785050875
+      // -------------------------------------------------------
+      async function sendWhatsAppMessage(messageText) {
         try {
+          const payload = {
+            name: "Smile Clinic",
+            phone: "962785050875", // *** FIXED NUMBER HERE ***
+            service: "New Booking",
+            appointment: messageText,
+            image: null,
+          };
+
+          log("📤 Sending WhatsApp message...");
+
           const res = await fetch(
             "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
             {
@@ -71,48 +78,46 @@
           const data = await res.json();
 
           if (data.success) {
-            log("✅ WhatsApp message sent successfully!");
+            log("✅ WhatsApp sent successfully!");
           } else {
-            log("❌ WhatsApp send failed: " + JSON.stringify(data));
+            log("❌ WhatsApp failed: " + JSON.stringify(data));
           }
         } catch (err) {
-          log("🔥 ERROR: " + err.message);
+          log("❌ ERROR sending message: " + err.message);
         }
       }
 
-      // LISTEN FOR NEW ROWS
-      async function startListener() {
-        log("👂 Listening for INSERTS in web_bookings...");
+      // -------------------------------------------------------
+      // REALTIME LISTENER (INSERT)
+      // -------------------------------------------------------
+      supabase
+        .channel("booking-auto-sender")
+        .on(
+          "postgres_changes",
+          { event: "INSERT", schema: "public", table: "web_bookings" },
+          (payload) => {
+            log("🎉 NEW BOOKING ADDED!");
 
-        supabase
-          .channel("booking-listener")
-          .on(
-            "postgres_changes",
-            {
-              event: "INSERT",
-              schema: "public",
-              table: "web_bookings",
-            },
-            (payload) => {
-              log("🆕 New booking detected!");
-              console.log(payload);
+            const newRow = payload.new;
 
-              const newRow = payload.new;
+            const name = newRow.name;
+            const phone = newRow.phone;
+            const service = newRow.service;
 
-              const name = newRow.name;
-              const phone = newRow.phone;
-              const service = newRow.service;
-              const contactTime = newRow.contact_time;
+            log(`👤 Name: ${name}`);
+            log(`📞 Phone: ${phone}`);
+            log(`🦷 Service: ${service}`);
 
-              log(`➡ Sending message to ${phone}`);
+            // Build message text
+            const messageText = `عميل جديد!\nالاسم: ${name}\nالخدمة: ${service}\nرقم الهاتف: ${phone}`;
 
-              sendWhatsApp(phone, service, name, contactTime);
-            }
-          )
-          .subscribe();
-      }
+            // Send WhatsApp to your fixed number
+            sendWhatsAppMessage(messageText);
+          }
+        )
+        .subscribe();
 
-      startListener();
+      log("👂 Candy Auto Sender is running... waiting for new rows.");
     </script>
   </body>
 </html>
